--- a/promptIAAgro_GITHUB.ipynb
+++ b/promptIAAgro_GITHUB.ipynb
@@ -5,18 +5,18 @@
    "id": "cce35221",
    "metadata": {},
    "source": [
-    "# 💡 Proyecto: Asistente Financiero Agropecuario con IA\n",
+    "#  Proyecto: Asistente Financiero Agropecuario con IA\n",
     "Este proyecto es una prueba de concepto (POC) que utiliza **OpenAI GPT-4** para actuar como un asesor financiero especializado en el sector agropecuario argentino. A través de *prompt engineering*, el sistema puede recomendar líneas de crédito, responder consultas personalizadas y adaptarse al perfil del productor.\n",
     "\n",
-    "## 🚜 Contexto\n",
+    "##  Contexto\n",
     "En Argentina, pequeños y medianos productores rurales enfrentan dificultades para acceder al financiamiento. Este asistente conversacional busca reducir esas barreras informativas usando Inteligencia Artificial.\n",
     "\n",
-    "## 📦 Requisitos\n",
+    "##  Requisitos\n",
     "- Python 3.8+\n",
     "- Paquetes: `openai`, `os`\n",
     "- Variable de entorno: `OPENAI_API_KEY` definida previamente con tu clave de API\n",
     "\n",
-    "## ✍️ Autor\n",
+    "##  Autor\n",
     "Desarrollado como parte de una POC para prácticas de Fast Prompting en Data Analytics."
    ]
   },
@@ -35,10 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 📦 Importación de librerías y configuración segura de la API\n",
+    "# Importación de librerías y configuración segura de la API\n",
     "import os\n",
     "import openai\n",
-    "# Asegúrate de definir la variable de entorno OPENAI_API_KEY antes de ejecutar esto\n",
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n"
    ]
   },
@@ -57,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 🧠 Definición de prompts\n",
+    "# Definición de prompts\n",
     "# El mensaje del sistema configura el comportamiento del modelo.\n",
     "# El mensaje del usuario representa una consulta típica de un productor agropecuario.\n",
     "system_prompt = \"Actúa como un asesor financiero especializado en el sector agropecuario argentino.\"\n",
